Git ignore and testing (e2e and unit) set up

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
 
   <link rel="stylesheet" href="lib/snapjs/snap.css">
   <link rel="stylesheet" href="/lib/angular-snap/angular-snap.min.css">
+  <link rel="stylesheet" href="/lib/toastr/toastr.min.css">
   <link rel="stylesheet" href="css/main.css">
 
   <!-- <script src="lib/modernizr-2.8.3-respond-1.4.2.min.js"></script> -->
@@ -84,6 +85,7 @@
   <script src="/lib/angular-snap/angular-snap.min.js"></script>
 
   <script src="/lib/moment/moment.js"></script>
+  <script src="/lib/toastr/toastr.js"></script>
   <script src="/lib/twix/bin/twix.min.js"></script>
 
 
@@ -91,18 +93,19 @@
   <script src="/app.js"></script>
   <script src="/fakeData.js"></script>
   <script src="/modules/authentication/authentication.module.js"></script>
-  <script src="/modules/core/core.module.js"></script>
   <script src="/modules/exchange/exchange.module.js"></script>
+  <script src="/modules/core/core.module.js"></script>
   <script src="/modules/news/news.module.js"></script>
   <script src="/modules/registration/registration.module.js"></script>
   <script src="/modules/authentication/controllers/authentication.controller.js"></script>
-  <script src="/modules/core/controllers/home.controller.js"></script>
-  <script src="/modules/core/filters/ago.filter.js"></script>
-  <script src="/modules/core/filters/percent.filter.js"></script>
   <script src="/modules/exchange/controllers/exchange.controller.js"></script>
   <script src="/modules/exchange/directives/exchange.directive.js"></script>
   <script src="/modules/exchange/directives/stock.directive.js"></script>
   <script src="/modules/exchange/services/exchange.service.js"></script>
+  <script src="/modules/core/controllers/home.controller.js"></script>
+  <script src="/modules/core/filters/ago.filter.js"></script>
+  <script src="/modules/core/filters/percent.filter.js"></script>
+  <script src="/modules/core/services/logger.service.js"></script>
   <script src="/modules/news/controllers/news.controller.js"></script>
   <script src="/modules/registration/controllers/registration.controller.js"></script>
   <!-- endinject -->
