All TAD tests done. Now ready to start test-driving this thing.

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 <head >
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Fantasy Trader</title>
+  <title>Fantasy Trader {{title}}</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
@@ -93,30 +93,20 @@
   <script src="/fakeData.js"></script>
   <script src="/modules/authentication/authentication.module.js"></script>
   <script src="/modules/core/core.module.js"></script>
-  <script src="/modules/core/core.module.test.js"></script>
   <script src="/modules/exchange/exchange.module.js"></script>
-  <script src="/modules/registration/registration.module.js"></script>
   <script src="/modules/news/news.module.js"></script>
-  <script src="/modules/core/controllers/core.controller.js"></script>
-  <script src="/modules/core/controllers/core.controller.test.js"></script>
+  <script src="/modules/registration/registration.module.js"></script>
   <script src="/modules/authentication/controllers/authentication.controller.js"></script>
-  <script src="/modules/authentication/controllers/authentication.controller.test.js"></script>
+  <script src="/modules/core/controllers/core.controller.js"></script>
   <script src="/modules/core/filters/ago.filter.js"></script>
-  <script src="/modules/core/filters/ago.filter.test.js"></script>
   <script src="/modules/core/filters/percent.filter.js"></script>
-  <script src="/modules/core/filters/percent.filter.test.js"></script>
   <script src="/modules/core/services/logger.service.js"></script>
-  <script src="/modules/core/services/logger.service.test.js"></script>
-  <script src="/modules/core/views/homepage.spec.js"></script>
   <script src="/modules/exchange/controllers/exchange.controller.js"></script>
-  <script src="/modules/exchange/controllers/exchange.controller.test.js"></script>
   <script src="/modules/exchange/directives/exchange.directive.js"></script>
-  <script src="/modules/exchange/directives/exchange.directive.test.js"></script>
   <script src="/modules/exchange/directives/stock.directive.js"></script>
-  <script src="/modules/exchange/directives/stock.directive.test.js"></script>
   <script src="/modules/exchange/services/exchange.service.js"></script>
-  <script src="/modules/registration/controllers/registration.controller.js"></script>
   <script src="/modules/news/controllers/news.controller.js"></script>
+  <script src="/modules/registration/controllers/registration.controller.js"></script>
   <!-- endinject -->
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID.
