--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
 
   <!-- <script src="lib/modernizr-2.8.3-respond-1.4.2.min.js"></script> -->
 </head>
-<body>
+<body data-ng-controller="CoreCtrl as app">
   <!--[if lt IE 8]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
@@ -48,6 +48,7 @@
           <li><a data-ng-href="#/news">News</a></li>
           <li><a data-ng-href="#/exchange/list">Exchanges</a></li>
           <li><a data-ng-href="#/rules">Rules</a></li>
+          <li><a data-ng-href="#" data-ng-click="app.logout()">Logout</a></li>
         </ul>
       </nav>
     </snap-drawer>
@@ -71,6 +72,7 @@
   <script src="/lib/jquery/dist/jquery.min.js"></script>
   <script src="/lib/angular/angular.min.js"></script>
   <script src="/lib/ui-router/release/angular-ui-router.min.js"></script>
+  <script src="lib/angular-base64/angular-base64.min.js"></script>
   <script src="/lib/angular-bootstrap/ui-bootstrap.min.js"></script>
   <script src="/lib/lodash/lodash.min.js"></script>
 
@@ -97,16 +99,18 @@
   <script src="/modules/news/news.module.js"></script>
   <script src="/modules/registration/registration.module.js"></script>
   <script src="/modules/authentication/controllers/authentication.controller.js"></script>
+  <script src="/modules/authentication/services/authentication.service.js"></script>
+  <script src="/modules/exchange/controllers/exchange.controller.js"></script>
   <script src="/modules/exchange/directives/exchange.directive.js"></script>
   <script src="/modules/exchange/directives/stock.directive.js"></script>
-  <script src="/modules/exchange/controllers/exchange.controller.js"></script>
   <script src="/modules/exchange/services/exchange.service.js"></script>
   <script src="/modules/core/controllers/core.controller.js"></script>
   <script src="/modules/core/filters/ago.filter.js"></script>
   <script src="/modules/core/filters/percent.filter.js"></script>
   <script src="/modules/core/interceptors/http.interceptor.js"></script>
-  <script src="/modules/core/services/logger.service.js"></script>
   <script src="/modules/news/controllers/news.controller.js"></script>
+  <script src="/modules/core/services/logger.service.js"></script>
+  <script src="/modules/core/services/session.service.js"></script>
   <script src="/modules/registration/controllers/registration.controller.js"></script>
   <script src="/modules/registration/services/registration.service.js"></script>
   <!-- endinject -->
