--- a/src/index.html
+++ b/src/index.html
@@ -35,34 +35,36 @@
 
   <!-- <script src="lib/modernizr-2.8.3-respond-1.4.2.min.js"></script> -->
 </head>
-<body data-ng-controller="CoreCtrl as app">
+<body data-ng-controller="CoreCtrl as app" data-ng-init="app.init()">
   <!--[if lt IE 8]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 
   <section class="page">
-    <snap-drawer>
+    <div class="snap-drawer">
       <nav>
         <ul>
           <li><a data-ng-href="#/">Home</a></li>
           <li><a data-ng-href="#/news">News</a></li>
-          <li><a data-ng-href="#/exchange/list">Exchanges</a></li>
-          <li><a data-ng-href="#/rules">Rules</a></li>
-          <li><a data-ng-href="#" data-ng-click="app.logout()">Logout</a></li>
+          <li><a data-ng-href="#/exchange/list" data-ng-show="app.hasLink('Exchanges')">Exchanges</a></li>
+          <li><a data-ng-href="#/rules"">Rules</a></li> 
+          <li><a data-ng-href="#/indexes" data-ng-show="app.hasLink('Indexes')">Indexes</a></li>
+          <li><a class="separator" data-ng-href="#/login" data-ng-show="app.hasAction('login')">Login</a></li>
+          <li><a data-ng-href="#/register" data-ng-show="app.hasAction('register')">Register</a></li>
         </ul>
       </nav>
-    </snap-drawer>
+    </div>
     <snap-content>
-    <header class="topbar" data-ng-if="title.toLowerCase() !== 'login' && title.toLowerCase() !== 'registration'">
-      <span class="pull-left">
-        <span class="fa fa-bars" snap-toggle="left"></span>
-        <span class="page-title" data-ng-bind="title"></span>
-      </span>
-      <span class="pull-right">
-        <span class="fa fa-search"></span>
-        <span class="fa fa-inbox"></span>
-      </span>
-    </header>
+      <header class="topbar" data-ng-if="title.toLowerCase() !== 'login' && title.toLowerCase() !== 'registration'">
+        <span class="pull-left">
+          <span class="fa fa-bars" snap-toggle="left"></span>
+          <span class="page-title" data-ng-bind="title"></span>
+        </span>
+        <span class="pull-right">
+          <span class="fa fa-search"></span>
+          <span class="fa fa-inbox"></span>
+        </span>
+      </header>
       <section class="content" data-ui-view></section>
     </snap-content>
     <footer>
@@ -94,23 +96,25 @@
   <script src="/app.js"></script>
   <script src="/fakeData.js"></script>
   <script src="/modules/authentication/authentication.module.js"></script>
-  <script src="/modules/exchange/exchange.module.js"></script>
   <script src="/modules/core/core.module.js"></script>
+  <script src="/modules/exchange/exchange.module.js"></script>
+  <script src="/modules/hyper-resource/hyper-resource.provider.js"></script>
   <script src="/modules/news/news.module.js"></script>
   <script src="/modules/registration/registration.module.js"></script>
   <script src="/modules/authentication/controllers/authentication.controller.js"></script>
   <script src="/modules/authentication/services/authentication.service.js"></script>
-  <script src="/modules/exchange/controllers/exchange.controller.js"></script>
-  <script src="/modules/exchange/directives/exchange.directive.js"></script>
-  <script src="/modules/exchange/directives/stock.directive.js"></script>
-  <script src="/modules/exchange/services/exchange.service.js"></script>
   <script src="/modules/core/controllers/core.controller.js"></script>
   <script src="/modules/core/filters/ago.filter.js"></script>
   <script src="/modules/core/filters/percent.filter.js"></script>
   <script src="/modules/core/interceptors/http.interceptor.js"></script>
-  <script src="/modules/news/controllers/news.controller.js"></script>
+  <script src="/modules/core/services/core.service.js"></script>
   <script src="/modules/core/services/logger.service.js"></script>
   <script src="/modules/core/services/session.service.js"></script>
+  <script src="/modules/exchange/controllers/exchange.controller.js"></script>
+  <script src="/modules/exchange/directives/exchange.directive.js"></script>
+  <script src="/modules/exchange/directives/stock.directive.js"></script>
+  <script src="/modules/exchange/services/exchange.service.js"></script>
+  <script src="/modules/news/controllers/news.controller.js"></script>
   <script src="/modules/registration/controllers/registration.controller.js"></script>
   <script src="/modules/registration/services/registration.service.js"></script>
   <!-- endinject -->
