Got account module added for password reset. All of authentication complete. Still not updating menu after login/logout

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
       <nav>
         <ul>
           <li><a data-ng-href="#/">Home</a></li>
-          <li><a data-ng-href="#/news">News</a></li>
+          <li><a data-ui-sref="news">News</a></li>
           <li><a data-ng-href="#/exchange/list" data-ng-show="app.hasLink('myExchanges')">My Exchanges</a></li>
           <li><a data-ng-href="#/exchange/list" data-ng-show="app.hasLink('openExchanges')">Open Exchanges</a></li>
           <li><a data-ng-href="#/notifications/list" data-ng-show="app.hasLink('notifications')">Notifications</a></li>
@@ -54,6 +54,7 @@
           <li><a data-ng-href="#/indexes" data-ng-show="app.hasLink('Indexes')">Indexes</a></li>
           <li><a class="separator" data-ng-href="#/login" data-ng-show="app.hasAction('login')">Login</a></li>
           <li><a data-ng-href="#/register" data-ng-show="app.hasAction('register')">Register</a></li>
+          <li><a data-ui-sref="passwordReset" data-ng-show="app.hasAction('logout')">Change Password</a></li>
           <li><a class="separator" data-ng-href="#" data-ng-click="app.logout()" data-ng-show="app.hasAction('logout')">Logout</a></li>
         </ul>
       </nav>
@@ -99,14 +100,20 @@
   <!-- inject:js -->
   <script src="/app.js"></script>
   <script src="/fakeData.js"></script>
+  <script src="/modules/account/account.module.js"></script>
   <script src="/modules/authentication/authentication.module.js"></script>
-  <script src="/modules/core/core.module.js"></script>
   <script src="/modules/exchange/exchange.module.js"></script>
+  <script src="/modules/core/core.module.js"></script>
   <script src="/modules/hyper-resource/hyper-resource.provider.js"></script>
   <script src="/modules/news/news.module.js"></script>
   <script src="/modules/registration/registration.module.js"></script>
-  <script src="/modules/authentication/controllers/authentication.controller.js"></script>
+  <script src="/modules/account/controllers/account.controller.js"></script>
   <script src="/modules/authentication/services/authentication.service.js"></script>
+  <script src="/modules/authentication/controllers/authentication.controller.js"></script>
+  <script src="/modules/exchange/controllers/exchange.controller.js"></script>
+  <script src="/modules/exchange/directives/exchange.directive.js"></script>
+  <script src="/modules/exchange/directives/stock.directive.js"></script>
+  <script src="/modules/exchange/services/exchange.service.js"></script>
   <script src="/modules/core/controllers/core.controller.js"></script>
   <script src="/modules/core/directives/market.directive.js"></script>
   <script src="/modules/core/filters/ago.filter.js"></script>
@@ -116,10 +123,6 @@
   <script src="/modules/core/services/logger.service.js"></script>
   <script src="/modules/core/services/session.service.js"></script>
   <script src="/modules/core/services/siren.service.js"></script>
-  <script src="/modules/exchange/controllers/exchange.controller.js"></script>
-  <script src="/modules/exchange/directives/exchange.directive.js"></script>
-  <script src="/modules/exchange/directives/stock.directive.js"></script>
-  <script src="/modules/exchange/services/exchange.service.js"></script>
   <script src="/modules/news/controllers/news.controller.js"></script>
   <script src="/modules/registration/controllers/registration.controller.js"></script>
   <script src="/modules/registration/services/registration.service.js"></script>
