--- a/src/index.html
+++ b/src/index.html
@@ -101,13 +101,15 @@
   <script src="/app.js"></script>
   <script src="/fakeData.js"></script>
   <script src="/modules/account/account.module.js"></script>
-  <script src="/modules/core/core.module.js"></script>
   <script src="/modules/authentication/authentication.module.js"></script>
-  <script src="/modules/hyper-resource/hyper-resource.provider.js"></script>
+  <script src="/modules/core/core.module.js"></script>
   <script src="/modules/exchange/exchange.module.js"></script>
+  <script src="/modules/hyper-resource/hyper-resource.provider.js"></script>
   <script src="/modules/news/news.module.js"></script>
   <script src="/modules/registration/registration.module.js"></script>
   <script src="/modules/account/controllers/account.controller.js"></script>
+  <script src="/modules/authentication/controllers/authentication.controller.js"></script>
+  <script src="/modules/authentication/services/authentication.service.js"></script>
   <script src="/modules/core/controllers/core.controller.js"></script>
   <script src="/modules/core/directives/market.directive.js"></script>
   <script src="/modules/core/filters/ago.filter.js"></script>
@@ -117,14 +119,13 @@
   <script src="/modules/core/services/logger.service.js"></script>
   <script src="/modules/core/services/session.service.js"></script>
   <script src="/modules/core/services/siren.service.js"></script>
-  <script src="/modules/authentication/controllers/authentication.controller.js"></script>
-  <script src="/modules/authentication/services/authentication.service.js"></script>
   <script src="/modules/exchange/controllers/exchange.controller.js"></script>
   <script src="/modules/exchange/directives/exchange.directive.js"></script>
   <script src="/modules/exchange/directives/stock.directive.js"></script>
   <script src="/modules/exchange/services/exchange.service.js"></script>
   <script src="/modules/news/controllers/news.controller.js"></script>
   <script src="/modules/registration/controllers/registration.controller.js"></script>
+  <script src="/modules/registration/resources/registration.resource.js"></script>
   <script src="/modules/registration/services/registration.service.js"></script>
   <!-- endinject -->
 
