User listing screen stubbed out with fake data.

--- a/src/index.html
+++ b/src/index.html
@@ -101,15 +101,16 @@
   <script src="/app.js"></script>
   <script src="/fakeData.js"></script>
   <script src="/modules/account/account.module.js"></script>
-  <script src="/modules/authentication/authentication.module.js"></script>
   <script src="/modules/core/core.module.js"></script>
   <script src="/modules/exchange/exchange.module.js"></script>
+  <script src="/modules/authentication/authentication.module.js"></script>
   <script src="/modules/hyper-resource/hyper-resource.provider.js"></script>
   <script src="/modules/news/news.module.js"></script>
   <script src="/modules/registration/registration.module.js"></script>
+  <script src="/modules/role/role.module.js"></script>
+  <script src="/modules/stock/stock.module.js"></script>
+  <script src="/modules/user/user.module.js"></script>
   <script src="/modules/account/controllers/account.controller.js"></script>
-  <script src="/modules/authentication/controllers/authentication.controller.js"></script>
-  <script src="/modules/authentication/services/authentication.service.js"></script>
   <script src="/modules/core/controllers/core.controller.js"></script>
   <script src="/modules/core/directives/market.directive.js"></script>
   <script src="/modules/core/filters/ago.filter.js"></script>
@@ -123,10 +124,14 @@
   <script src="/modules/exchange/directives/exchange.directive.js"></script>
   <script src="/modules/exchange/directives/stock.directive.js"></script>
   <script src="/modules/exchange/services/exchange.service.js"></script>
+  <script src="/modules/authentication/controllers/authentication.controller.js"></script>
+  <script src="/modules/authentication/services/authentication.service.js"></script>
   <script src="/modules/news/controllers/news.controller.js"></script>
   <script src="/modules/registration/controllers/registration.controller.js"></script>
   <script src="/modules/registration/resources/registration.resource.js"></script>
   <script src="/modules/registration/services/registration.service.js"></script>
+  <script src="/modules/stock/services/stock.service.js"></script>
+  <script src="/modules/user/controllers/user.controller.js"></script>
   <!-- endinject -->
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID.
